<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:padding="@dimen/_10sdp"
    android:layout_gravity="center"

    >
    <ImageView
        android:id="@+id/dialog_image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_web_link"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintStart_toEndOf="@+id/dialog_image_url"
        app:layout_constraintTop_toTopOf="@+id/dialog_image_url"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_image_url"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        />
    <EditText
        android:id="@+id/dialog_et_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_image_url"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@null"
        android:hint="@string/enter_url"
        android:textColorHint="@color/colorTextHint"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/dialog_tv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/dialog_et_url"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />
    <TextView
        android:id="@+id/dialog_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/dialog_et_url"
        app:layout_constraintEnd_toStartOf="@id/dialog_tv_add"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>