<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout_container_dialog_delete"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    android:layout_gravity="center"
    >
    <ImageView
        android:id="@+id/dialog_image_delete"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        app:layout_constraintStart_toEndOf="@+id/dialog_image_delete"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@+id/dialog_image_delete"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_image_delete"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/ubuntu_medium"
        />
    <TextView
        android:id="@+id/dialog_txt_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        app:layout_constraintTop_toBottomOf="@id/dialog_image_delete"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/ubuntu_regular"

        />

    <TextView
        android:id="@+id/dialog_tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_note_dailog"
        android:textColor="@color/colorDelete"
        android:fontFamily="@font/ubuntu_bold"
        app:layout_constraintTop_toBottomOf="@+id/dialog_txt_delete"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/_13ssp"
        />
    <TextView
        android:id="@+id/dialog_tv_delete_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CANCEL"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/ubuntu_medium"
        app:layout_constraintTop_toTopOf="@+id/dialog_tv_delete"
        app:layout_constraintEnd_toStartOf="@+id/dialog_tv_delete"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_tv_delete"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>