<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateNoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/arrow_img"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_arrow"
                app:tint="@color/colorIcon" />
            <ImageView
                android:id="@+id/image_save"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_done"
                android:background="@drawable/done_shape"
                android:padding="@dimen/_5sdp"
                app:tint="@color/colorIcon" />
            <EditText
                android:id="@+id/input_note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textColorHint="@color/colorTextHint"
                android:background="@null"
                app:layout_constraintTop_toBottomOf="@+id/arrow_img"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/txt_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorIcon"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="@id/input_note_title"
                app:layout_constraintStart_toStartOf="@+id/input_note_title"
                app:layout_constraintTop_toBottomOf="@+id/input_note_title"
                />
            <LinearLayout
                android:id="@+id/linear_note_sub_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_date_time"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_20sdp"
                >
                <View
                    android:id="@+id/subTitleIndicator"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"
                    android:background="@drawable/indecator_shape"
                    />
                <EditText
                    android:id="@+id/input_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="@dimen/_5sdp"
                    android:hint="@string/note_subtitle"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    />

            </LinearLayout>
            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/linear_note_sub_title"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="gone"
                />
            <ImageView
                android:id="@+id/remove_image"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/delete_shape"
                android:src="@drawable/ic_baseline_delete_24"
                app:tint="@color/white"
                android:padding="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="@+id/imageNote"
                app:layout_constraintTop_toTopOf="@+id/imageNote"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/linear_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginVertical="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/tv_link"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_13ssp"
                    android:autoLink="web"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/ubuntu_regular"
                    />
                <ImageView
                    android:id="@+id/remove_link"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:tint="@color/colorDelete"
                    android:padding="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />

            </LinearLayout>

            <EditText
                android:id="@+id/input_note_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/type_note_here"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:gravity="top"
                android:minHeight="@dimen/_100sdp"
                app:layout_constraintTop_toBottomOf="@+id/linear_link"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>